# picr

./: Cargo.toml  README.md
src/: file.rs  imgproc.rs  main.rs  process.rs
src/ui/: config.rs  files.rs  image.rs  input.rs  menu.rs  mod.rs  progress.rs
