[package]
name = "Picr"
version = "2024.11.0"
edition = "2021"

[package.metadata.bundle]
identifier = "ip.mattstone.picr"
icon = ["./assets/icon.png"]
categories = ["Utility"]
copyright = "Copyright (c) Matthew Stone 2024. All rights reserved."
category = "Photography"
short_description = "Tool for quickly and easily culling astrophotography photos."

[package.metadata.bundle.macos]
frameworks = []
minimum-system-version = "10.13"
document-types = [{name = "FITS File", extensions = ["fits", "fit"], handler = true}]

[package.metadata.bundle.windows]
console = false
file-associations = [{description = "FITS File", extensions = ["fits", "fit"]}]

[bundle.linux]
categories = ["Science", "Utility"]
mime-types = ["application/fits", "application/fits-image"]

[dependencies]
eframe = "0.29"
egui = "0.29"
rfd = "0.13"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
fitrs = "0.5"
image = "0.25"
image-webp = "0.2"
anyhow = "1.0"
